blog/infra/k8s/posts.old.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: microservices/posts:0.0.5
      # imagePullPolicy tells kubernetes not to try and pull this image on a remote repository
      # but to run the one locally
      imagePullPolicy: Never
