blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      # the "label" and "selector" fields in kubernetes work similar to
      # how classNames work in css. We give this Deployment a label of app "client"
      # and then it can be targeted via that label using the selctor field from other
      # kubernetes objects (Load Balance service, or any other service, object etc)
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: negrusadan95/microservices-client
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
