blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      # the "label" and "selector" fields in kubernetes work similar to
      # how classNames work in css. We give this Deployment a label of app "event-bus"
      # and then it can be targeted via that label using the selctor field from other
      # kubernetes objects (Load Balance service, or any other service, object etc)
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: negrusadan95/microservices-event-bus
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
