blog/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      # the "label" and "selector" fields in kubernetes work similar to
      # how classNames work in css. We give this Deployment a label of app "query"
      # and then it can be targeted via that label using the selctor field from other
      # kubernetes objects (Load Balance service, or any other service, object etc)
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: negrusadan95/microservices-query
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
